--- a/index.css
+++ b/index.css
@@ -61,20 +61,20 @@ body {
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
-  display: none;
   align-items: center;
   justify-content: center;
+  display: none;
 }
 
 .popup__content {
-  height: 380px;
+  height: 450px;
   width: 500px;
   background: #fff;
   padding: 20px;
   border-radius: 10px;
-  position: fixed;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -82,11 +82,11 @@ body {
 
 .popup__close {
   font-weight: 900;
-  position: absolute;
   top: 15px;
   right: 15px;
   font-size: 24px;
   cursor: pointer;
+  position: absolute;
 }
 
 .popup__title {
@@ -99,7 +99,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
 }
 
 .form label {
@@ -113,4 +113,22 @@ body {
   width: 300px;
   height: 30px;
   padding: 2px 10px;
+}
+
+.required:invalid {
+  border: red solid 2px;
+}
+
+.error-message {
+  color: red;
+  font-size: 0.75rem;
+  visibility: hidden;
+}
+
+.required:invalid ~ .error-message {
+  visibility: visible;
+}
+
+.title-block {
+  display: flex;
 }
