--- a/index.css
+++ b/index.css
@@ -41,16 +41,7 @@ body {
   border: none;
   border-radius: 10px;
   cursor: pointer;
-}
-
-.main {
-  background-color: var(--pale-spring-bud-2);
-  min-height: 100vh;
-}
-
-.wrapper-main {
-  display: grid;
-  grid-template-columns: 4fr 3fr 2fr 2fr;
+  background-color: violet;
 }
 
 .heading {
@@ -129,6 +120,49 @@ body {
   visibility: visible;
 }
 
-.title-block {
-  display: flex;
+.main {
+  background-color: var(--pale-spring-bud-2);
+  min-height: 100vh;
+}
+
+.wrapper-main {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(300px, 1fr);
+  gap: 30px;
+}
+
+.book {
+  background-color: palegreen;
+  border-radius: 10px;
+  display: grid;
+  grid-template-rows: 2fr repeat(4, 1fr);
+  place-items: center;
+}
+
+.book__info {
+  font-weight: 500;
+  padding: 0 15px;
+}
+
+.book__info-title {
+  font-weight: 700;
+  text-align: center;
+}
+
+.book__info-pages {
+  align-self: start;
+}
+
+.btn {
+  place-self: stretch;
+  border: none;
+  font-weight: 600;
+  background-color: blue;
+}
+
+.button-delete {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: red;
 }
