--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ body {
 
 .wrapper-main {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-columns: repeat(3, minmax(320px, 1fr));
   grid-auto-rows: minmax(300px, 1fr);
   gap: 30px;
 }
