--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ body {
 }
 
 .wrapper {
-  width: 1024px;
+  width: 64rem;
   margin: 0 auto;
   padding: 20px 0;
 }
@@ -53,7 +53,7 @@ body {
 
 .wrapper-main {
   display: grid;
-  grid-template-columns: repeat(3, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-auto-rows: minmax(300px, 1fr);
   gap: 30px;
 }
@@ -134,7 +134,6 @@ body {
   background-color: white;
   width: 420px;
   height: 420px;
-  max-width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -287,4 +286,41 @@ body {
 #overlay.active {
   opacity: 1;
   pointer-events: all;
+}
+
+@media (max-width: 1069px) {
+  .wrapper {
+    width: 969px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .wrapper {
+    width: 725px;
+  }
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    width: 425px;
+  }
+}
+
+@media (max-width: 480px) {
+  .wrapper {
+    width: 280px;
+  }
+
+  .wrapper-main {
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  }
+
+  .modal {
+    width: 280px;
+  }
+
+  .form__txt,
+  .btn-submit {
+    width: 225px;
+  }
 }
